Attempting to fix issue categories bug:
-changed the syntax in database.sql with non-null default for category field
-remove unnecessary get-releases javascript from admin panel
-use category_id in edit form
-remove extra padding in global nav bar

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,8 +1,8 @@
 /* Building Intellect custom styles */
 
 .logo-nav {
-    width: 50px !important;
-    height: 50px !important;
+    width: 45px !important;
+    height: 45px !important;
 }
 
 .logo-login {
